fixed server side error, ability to remove modules added and wroking